tests/fixtures/diagnostics/type-checker/negative/null-safety/input.tysh
namespace Samples.NullSafety

fun maybe(): string? = null

fun assignNull(): string {
  let text: string = null
  text
}

fun assignNullable(): string {
  let maybeText: string? = null
  let text: string = maybeText
  text
}

fun returnNull(): string = null

fun returnNullable(): string = maybe()
